FIX several issues noticed in the videos chapter

--- a/docs/de-de/modules/videos/pages/amazon-artikel.adoc
+++ b/docs/de-de/modules/videos/pages/amazon-artikel.adoc
@@ -3,10 +3,7 @@
 :id: TFZITWM
 :author: team-plenty-channel
 
-xref:videos:verkauf.adoc#[Artikel für den Verkauf auf Amazon vorbereiten]
-
-xref:videos:eigenschaften.adoc#[Artikel durch Eigenschaften optimieren]
-
-xref:videos:artikelexport.adoc#[Artikel zu Amazon exportieren]
-
-xref:videos:flat-files.adoc#[Lagerbestandsdateivorlagen (Flat Files)]
+* xref:videos:verkauf.adoc#[Artikel für den Verkauf auf Amazon vorbereiten]
+* xref:videos:eigenschaften-amazon.adoc#[Artikel durch Eigenschaften optimieren]
+* xref:videos:artikelexport.adoc#[Artikel zu Amazon exportieren]
+* xref:videos:flat-files.adoc#[Lagerbestandsdateivorlagen (Flat Files)]
