--- a/docs/de-de/modules/videos/pages/artikel-manuell-importieren.adoc
+++ b/docs/de-de/modules/videos/pages/artikel-manuell-importieren.adoc
@@ -1,4 +1,4 @@
-= Artikel einmalig manuell importieren
+= Einmaliger Import (manuell)
 :page-index: false
 :id: ZQVR3N9
 :author: team-plenty-channel
@@ -6,8 +6,15 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Verfügt dein Unternehmen über viele Informationen, die in einer CSV-Dateien vorliegen? Mit ElasticSync kannst du diese Daten manuell in plentymarkets importieren. Dieses Video richtet sich insbesondere an neue plentymarkets Benutzer:innen, die zunächst Produkt- oder Kundendaten übertragen möchten, während sie das System einrichten. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Verfügt dein Unternehmen über viele Informationen, die in einer CSV-Dateien vorliegen?
+Mit dem Import-Tool kannst du diese Daten manuell in plentymarkets importieren.
+Dieses Video richtet sich insbesondere an neue plentymarkets Benutzer:innen, die zunächst Produkt- oder Kundendaten übertragen möchten, während sie das System einrichten.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
+
 |xref:videos:artikel-manuell-importieren-bestand-abgleichen.adoc#video[Bestand flexibel abgleichen (0:26)]
 
 xref:videos:artikel-manuell-importieren-preis-aktualisieren.adoc#video[Preis aktualisieren (1:43)]
