--- a/docs/de-de/modules/videos/pages/auftraege-importieren.adoc
+++ b/docs/de-de/modules/videos/pages/auftraege-importieren.adoc
@@ -1,4 +1,4 @@
-= Aufträge mit ElasticSync importieren
+= Aufträge importieren
 :page-index: false
 :id: CIFJHAU
 :author: team-plenty-channel
@@ -6,8 +6,14 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Du wechselst das System und willst deine Aufträge in plentymarkets importieren? Mit dem ElasticSync ist das ein Kinderspiel. Wir zeigen dir, wie du den Sync konfigurierst und worauf du achten musst, wenn du Aufträge importierst. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Du wechselst das System und willst deine Aufträge in plentymarkets importieren?
+Mit dem Import-Tool ist das ein Kinderspiel. Wir zeigen dir, wie du den Einstellungen konfigurierst und worauf du achten musst, wenn du Aufträge importierst.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
+
 |xref:videos:auftraege-importieren-daten-in-datei.adoc#video[Daten in deiner Datei (1:58)]
 
 xref:videos:auftraege-importieren-dummy-kunden.adoc#video[Dummy-Kunden anlegen (3:40)]
