--- a/docs/de-de/modules/videos/pages/auftraege.adoc
+++ b/docs/de-de/modules/videos/pages/auftraege.adoc
@@ -3,14 +3,9 @@
 :id: YY2G4P3
 :author: team-plenty-channel
 
-xref:videos:mfn-fba.adoc#[Der Unterschied zwischen MFN und FBA]
-
-xref:videos:mfn-auftraege.adoc#[MFN-Aufträge selbst bearbeiten]
-
-xref:videos:mfn-retouren.adoc#[MFN-Retouren bearbeiten]
-
-xref:videos:prime.adoc#[Amazon Prime einrichten]
-
-xref:videos:fba.adoc#[FBA-Aufträge]
-
-xref:videos:multi-channel.adoc#[Mit Multi-Channel FBA Aufträge aller Plattformen von Amazon abwickeln lassen]
+* xref:videos:mfn-fba.adoc#[Der Unterschied zwischen MFN und FBA]
+* xref:videos:mfn-auftraege.adoc#[MFN-Aufträge selbst bearbeiten]
+* xref:videos:mfn-retouren.adoc#[MFN-Retouren bearbeiten]
+* xref:videos:prime.adoc#[Amazon Prime einrichten]
+* xref:videos:fba.adoc#[FBA-Aufträge]
+* xref:videos:multi-channel.adoc#[Mit Multi-Channel FBA Aufträge aller Plattformen von Amazon abwickeln lassen]
