--- a/docs/de-de/modules/videos/pages/auftragsabwicklung.adoc
+++ b/docs/de-de/modules/videos/pages/auftragsabwicklung.adoc
@@ -7,46 +7,33 @@ Mach mit bei unserem Unternehmensrundgang und lerne, wie du deine Auftragsabwick
 
 == Einstieg
 
-xref:videos:einstieg-rundgang-auftragsabwicklung.adoc#[Ein Rundgang durch die Auftragsabwicklung]
+* xref:videos:einstieg-rundgang-auftragsabwicklung.adoc#[Ein Rundgang durch die Auftragsabwicklung]
 
 == Einstellungen vorab einrichten
 
-xref:videos:auftraege-mit-status.adoc#[Behalte deine Aufträge mit Status im Blick]
-
-<<videos/auftragsabwicklung/einstellungen-vorab-einrichten/auftragseinstellungen#, Ein kurzer Blick in die Auftragseinstellungen!>>
+* xref:videos:auftraege-mit-status.adoc#[Behalte deine Aufträge mit Status im Blick]
+* xref:videos:auftragseinstellungen#[Ein kurzer Blick in die Auftragseinstellungen]
 
 == Aufträge abwickeln
 
-xref:videos:erste-schritte.adoc#[Deine ersten Schritte, um Aufträge abzuwickeln]
-
-<<videos/auftragsabwicklung/auftraege-abwickeln/stornobeleg#, Wie geht man mit gesperrten Aufträgen um? Stornobeleg!>>
-
-xref:videos:schnellfunktionen-auftragsuebersicht.adoc#[Schnellfunktionen in der Auftragsübersicht]
-
-xref:videos:fulfillment-mit-prozessen.adoc#[Dein Fulfillment in plentymarkets mit Prozessen]
-
-xref:videos:lieferauftraege.adoc#[Lieferaufträge anlegen und automatisieren]
+* xref:videos:erste-schritte.adoc#[Deine ersten Schritte, um Aufträge abzuwickeln]
+* xref:videos:stornobeleg#[Wie geht man mit gesperrten Aufträgen um? Stornobeleg!]
+* xref:videos:schnellfunktionen-auftragsuebersicht.adoc#[Schnellfunktionen in der Auftragsübersicht]
+* xref:videos:fulfillment-mit-prozessen.adoc#[Dein Fulfillment in plentymarkets mit Prozessen]
+* xref:videos:lieferauftraege.adoc#[Lieferaufträge anlegen und automatisieren]
 
 == Versand
 
-xref:videos:versandoptionen-konfigurieren.adoc#[Versandoptionen konfigurieren]
-
-xref:videos:versandprofile.adoc#[Versandprofile anlegen und bearbeiten]
-
-xref:videos:portotabellen.adoc#[Portotabellen verwenden]
-
-xref:videos:versandkonfiguration-beispiel-dhl.adoc#[Deine Versandkonfigurationen am Beispiel von DHL Versenden]
+* xref:videos:versandoptionen-konfigurieren.adoc#[Versandoptionen konfigurieren]
+* xref:videos:versandprofile.adoc#[Versandprofile anlegen und bearbeiten]
+* xref:videos:portotabellen.adoc#[Portotabellen verwenden]
+* xref:videos:versandkonfiguration-beispiel-dhl.adoc#[Deine Versandkonfigurationen am Beispiel von DHL Versenden]
 
 == Retouren und Storno
 
-<<videos/auftragsabwicklung/retouren-und-storno/retoure-oder-storno#, Retoure oder Storno? Ein Wegweiser für deinen Kundenservice>>
-
-xref:videos:auftraege-stornieren.adoc#[Aufträge stornieren]
-
-xref:videos:retoureneinstellungen.adoc#[Individualisiere deine Retoureneinstellungen]
-
-xref:videos:manuelle-retourenanlage.adoc#[Retouren manuell anlegen]
-
-xref:videos:automatisierte-retourenanlage.adoc#[Automatisiert Retouren anlegen]
-
-xref:videos:gewaehrleistung.adoc#[Gewährleistung anlegen]
+* xref:videos:retoure-oder-storno#[Retoure oder Storno? Ein Wegweiser für deinen Kundenservice]
+* xref:videos:auftraege-stornieren.adoc#[Aufträge stornieren]
+* xref:videos:retoureneinstellungen.adoc#[Individualisiere deine Retoureneinstellungen]
+* xref:videos:manuelle-retourenanlage.adoc#[Retouren manuell anlegen]
+* xref:videos:automatisierte-retourenanlage.adoc#[Automatisiert Retouren anlegen]
+* xref:videos:gewaehrleistung.adoc#[Gewährleistung anlegen]
