--- a/docs/de-de/modules/videos/pages/benutzerkonten.adoc
+++ b/docs/de-de/modules/videos/pages/benutzerkonten.adoc
@@ -3,4 +3,4 @@
 :id: J7RP7DX
 :author: team-plenty-channel
 
-xref:videos:passwortsicherheitsstandard.adoc#[Integriere deinen Passwort-Sicherheitsstandard in plentymarkets]
+* xref:videos:passwortsicherheitsstandard.adoc#[Integriere deinen Passwort-Sicherheitsstandard in plentymarkets]
