--- a/docs/de-de/modules/videos/pages/daten-automatisch-importieren.adoc
+++ b/docs/de-de/modules/videos/pages/daten-automatisch-importieren.adoc
@@ -1,4 +1,4 @@
-= Daten automatisch importieren
+= Regelmäßiger Import (automatisch)
 :page-index: false
 :id: VGAV1R7
 :author: team-plenty-channel
@@ -6,8 +6,14 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Wenn du deine Dateien jedes Mal manuell austauschen müsstest, wenn du neue Daten erhältst, wäre das sehr aufwändig. Wenn du aber einen FTP-Server hast, kannst du plentymarkets problemlos so konfigurieren, dass neue Dateien automatisch importiert und alte Dateien archiviert werden. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Es wäre sehr aufwändig, deine Dateien jedes Mal manuell auszutauschen, wenn du neue Daten erhältst.
+Wenn du einen FTP-Server hast, kannst du plentymarkets problemlos so konfigurieren, dass neue Dateien automatisch importiert und alte Dateien archiviert werden.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
+
 |
 |===
 //end::einleitung[]
