--- a/docs/de-de/modules/videos/pages/datenimport-mit-elasticsync.adoc
+++ b/docs/de-de/modules/videos/pages/datenimport-mit-elasticsync.adoc
@@ -1,4 +1,4 @@
-= Datenimport mit ElasticSync
+= Erste Schritte mit dem Import-Tool
 :page-index: false
 :id: S49T76M
 :author: team-plenty-channel
@@ -6,8 +6,13 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Dieses Video zeigt dir die Grundlagen von ElasticSync. Das Video bietet einen umfassenden Überblick über das Tool und bietet dir die Möglichkeit zu lernen, wie du mit ElasticSync Daten in plentymarkets importieren kannst. Du erfährst, wie du eine CSV-Datei hochlädst, deine Daten abgleichst und zuordnest und den Import startest. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Dieses Video zeigt dir die Grundlagen des Import-Tools. Es bietet einen umfassenden Überblick über das Import-Tool und zeigt, wie du Daten in plentymarkets importieren kannst. Du erfährst, wie du eine CSV-Datei hochlädst, deine Daten abgleichst und zuordnest und den Import startest.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
+
 |xref:videos:datenimport-mit-elasticsync-csv-datei-hochladen.adoc#video[Lade deine CSV-Datei hoch (1:12)]
 
 xref:videos:datenimport-mit-elasticsync-daten-abgleichen-und-zuordnen.adoc#video[Gleiche deine Daten ab und ordne sie zu (3:39)]
