--- a/docs/de-de/modules/videos/pages/datenuebernahme.adoc
+++ b/docs/de-de/modules/videos/pages/datenuebernahme.adoc
@@ -3,32 +3,22 @@
 :id: IX6QM0A
 :author: team-plenty-channel
 
-Ob du neue Artikel schnell in dein System importieren möchtest oder auch nur einzelne Informationen up to date halten möchtest - plentymarkets bietet dir die passenden Tools.
-
-== Einstieg
-
-xref:videos:vorstellung-elasticsync.adoc#[Vorstellung von ElasticSync]
+Ob du neue Artikel schnell in dein System importieren möchtest oder auch nur einzelne Informationen up-to-date halten möchtest - plentymarkets bietet dir die passenden Tools.
 
 == Grundlagen
 
-xref:videos:datenimport-mit-elasticsync.adoc#[Datenimport mit ElasticSync]
-
-xref:videos:artikel-manuell-importieren.adoc#[Artikel einmalig manuell importieren]
-
-xref:videos:daten-automatisch-importieren.adoc#[Daten automatisch importieren]
+* xref:videos:datenimport-mit-elasticsync.adoc#[Erste Schritte mit dem Import-Tool]
+* xref:videos:artikel-manuell-importieren.adoc#[Einmaliger Import (manuell)]
+* xref:videos:daten-automatisch-importieren.adoc#[Regelmäßiger Import (automatisch)]
 
 == Zusatzfeatures
 
-xref:videos:zusatzinformationen-sync.adoc#[Zusätzliche Informationen zu Syncs hinzufügen]
-
-xref:videos:informationen-austauschen.adoc#[Informationen austauschen]
-
-xref:videos:informationen-aendern.adoc#[Informationen in Syncs ändern]
+* xref:videos:zusatzinformationen-sync.adoc#[Eigener Wert: Informationen ergänzen]
+* xref:videos:informationen-austauschen.adoc#[Eigene Zuordnung: Informationen austauschen]
+* xref:videos:informationen-aendern.adoc#[Regulärer Ausdruck: Informationen abändern]
+* xref:videos:import-export.adoc#[Vorlagen importieren und exportieren]
 
 == Praxisbeispiele
 
-xref:videos:import-export.adoc#[Syncs importieren und exportieren]
-
-xref:videos:artikel-und-varianten-anlegen.adoc#[Artikel und Varianten anlegen]
-
-xref:videos:auftraege-importieren.adoc#[Aufträge mit ElasticSync importieren]
+* xref:videos:artikel-und-varianten-anlegen.adoc#[Artikel und Varianten importieren]
+* xref:videos:auftraege-importieren.adoc#[Aufträge importieren]
