--- a/docs/de-de/modules/videos/pages/einstellungen-vorab-einrichten.adoc
+++ b/docs/de-de/modules/videos/pages/einstellungen-vorab-einrichten.adoc
@@ -3,6 +3,5 @@
 :id: SCX5QC5
 :author: team-order-core
 
-xref:videos:auftraege-mit-status.adoc#[Behalte deine Aufträge mit Status im Blick]
-
-<<videos/auftragsabwicklung/einstellungen-vorab-einrichten/auftragseinstellungen#, Ein kurzer Blick in die Auftragseinstellungen!>>
+* xref:videos:auftraege-mit-status.adoc#[Behalte deine Aufträge mit Status im Blick]
+* xref:videos:auftragseinstellungen#[Ein kurzer Blick in die Auftragseinstellungen]
