--- a/docs/de-de/modules/videos/pages/einstellungen.adoc
+++ b/docs/de-de/modules/videos/pages/einstellungen.adoc
@@ -3,6 +3,5 @@
 :id: BD31JEM
 :author: team-plenty-channel
 
-xref:videos:schnittstelle-einrichten.adoc#[ebay-Schnittstelle einrichten]
-
-xref:videos:rahmenbedingungen.adoc#[Lege deine ebay-Rahmenbedingungen fest]
+* xref:videos:schnittstelle-einrichten.adoc#[ebay-Schnittstelle einrichten]
+* xref:videos:rahmenbedingungen.adoc#[Lege deine ebay-Rahmenbedingungen fest]
