--- a/docs/de-de/modules/videos/pages/pos-einrichtung.adoc
+++ b/docs/de-de/modules/videos/pages/pos-einrichtung.adoc
@@ -1,12 +1,9 @@
-= plentyPOS-Einrichtung
+= plentyPOS Einrichtung
 :page-index: false
 :id: V647AFP
 :author: team-mobile
 
-xref:videos:backend.adoc#[Richte deine Kasse im plentymarkets Backend ein]
-
-xref:videos:app.adoc#[Installiere die App und kopple diese mit deinem plentyPOS]
-
-xref:videos:ec-karten.adoc#[Verbinde ein EC-Karten-Terminal mit deinem plentyPOS]
-
-xref:videos:diversartikel.adoc#[Verkaufe Diversartikel mit Dummy-Datensätzen]
+* xref:videos:backend.adoc#[Richte deine Kasse im plentymarkets Backend ein]
+* xref:videos:app.adoc#[Installiere die App und kopple diese mit deinem plentyPOS]
+* xref:videos:ec-karten.adoc#[Verbinde ein EC-Karten-Terminal mit deinem plentyPOS]
+* xref:videos:diversartikel.adoc#[Verkaufe Diversartikel mit Dummy-Datensätzen]
