--- a/docs/de-de/modules/videos/pages/pos.adoc
+++ b/docs/de-de/modules/videos/pages/pos.adoc
@@ -7,24 +7,18 @@ In wenigen Minuten richtest du dein Kassensystem in plentymarkets ein und bist b
 
 == Einstieg
 
-xref:videos:einstieg.adoc#[Einstieg]
+* xref:videos:pos-einstieg.adoc#[Einstieg]
 
 == plentyPOS Einrichtung
 
-xref:videos:backend.adoc#[Richte deine Kasse im plentymarkets Backend ein]
-
-xref:videos:app.adoc#[Installiere die App und kopple diese mit deinem plentyPOS]
-
-xref:videos:ec-karten.adoc#[Verbinde ein EC-Karten-Terminal mit deinem plentyPOS]
-
-xref:videos:diversartikel.adoc#[Verkaufe Diversartikel mit Dummy-Datensätzen]
+* xref:videos:backend.adoc#[Richte deine Kasse im plentymarkets Backend ein]
+* xref:videos:app.adoc#[Installiere die App und kopple diese mit deinem plentyPOS]
+* xref:videos:ec-karten.adoc#[Verbinde ein EC-Karten-Terminal mit deinem plentyPOS]
+* xref:videos:diversartikel.adoc#[Verkaufe Diversartikel mit Dummy-Datensätzen]
 
 == Arbeiten mit plentyPOS
 
-xref:videos:kassieren.adoc#[Kunden mit der plentymarkets App kassieren]
-
-<<videos/pos/arbeiten-mit-pos/einlagen-entnahmen#, Verbuche schnell Einlagen und Entnahmen!>>
-
-xref:videos:kassensturz.adoc#[Kassensturz mit deinem plentyPOS-System]
-
-<<videos/pos/arbeiten-mit-pos/tagesabschluss#, Beende erfolgreich den Tag mit dem Tagesabschluss!>>
+* xref:videos:kassieren.adoc#[Kunden mit der plentymarkets App kassieren]
+* xref:videos:einlagen-entnahmen#[Verbuche schnell Einlagen und Entnahmen]
+* xref:videos:kassensturz.adoc#[Kassensturz mit deinem plentyPOS-System]
+* xref:videos:tagesabschluss#[Beende erfolgreich den Tag mit dem Tagesabschluss]
