--- a/docs/de-de/modules/videos/pages/praxisbeispiele-import-export.adoc
+++ b/docs/de-de/modules/videos/pages/praxisbeispiele-import-export.adoc
@@ -1,4 +1,4 @@
-= Syncs importieren und exportieren
+= Vorlagen importieren und exportieren
 :page-index: false
 :page-aliases: import-export.adoc
 :id: 0I88H3P
@@ -7,8 +7,12 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Möchtest du Daten schnell in dein plentymarkets System importieren? Um Zeit zu sparen, kannst du vorkonfigurierte Sync-Vorlagen aus dem Online-Handbuch herunterladen und in plentymarkets importieren. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Möchtest du Daten schnell in dein plentymarkets System importieren? Um Zeit zu sparen, kannst du vorkonfigurierte Vorlagen aus dem Online-Handbuch herunterladen und in plentymarkets importieren.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
 |
 |===
 //end::einleitung[]
