--- a/docs/de-de/modules/videos/pages/prozesse.adoc
+++ b/docs/de-de/modules/videos/pages/prozesse.adoc
@@ -2,28 +2,16 @@
 :page-index: false
 :author: team-docs-automation
 
-xref:videos:plentybase.adoc#[plentyBase installieren]
-
-xref:videos:drucker.adoc#[Richte deinen Drucker ein]
-
-xref:videos:anlegen-starten.adoc#[Anlegen und Starten eines Prozesses]
-
-<<videos/automatisierung/prozesse/arbeitsschritte#, Was sind Arbeitsschritte?>>
-
-xref:videos:aktionen-subaktionen.adoc#[Aktionen und Subaktionen - Erwecke deine Prozesse zum Leben]
-
-xref:videos:import-export.adoc#[Import und Export von Prozessen]
-
-xref:videos:steuerelemente.adoc#[Die Steuerelemente werden vorgestellt]
-
-xref:videos:loop.adoc#[Loop - Das zyklische Steuerelement]
-
-xref:videos:split.adoc#[Split - Führe deine Prozesse in zwei unterschiedliche Richtungen]
-
-xref:videos:filter.adoc#[Filter - Das Steuerelement um deine Prozesse zu filtern]
-
-xref:videos:dialog.adoc#[Dialog - Lass deine Mitarbeiter die Richtung des Prozesses bestimmen]
-
-xref:videos:fallbeispiel-multi.adoc#[Fallbeispiel - Multi-Order-Picking]
-
-xref:videos:fallbeispiel-single.adoc#[Fallbeispiel - Single-Order-Picking]
+* xref:videos:plentybase.adoc#[plentyBase installieren]
+* xref:videos:drucker.adoc#[Richte deinen Drucker ein]
+* xref:videos:anlegen-starten.adoc#[Anlegen und Starten eines Prozesses]
+* xref:videos:arbeitsschritte#[Was sind Arbeitsschritte?]
+* xref:videos:aktionen-subaktionen.adoc#[Aktionen und Subaktionen - Erwecke deine Prozesse zum Leben]
+* xref:videos:prozesse-import-export.adoc#[Import und Export von Prozessen]
+* xref:videos:steuerelemente.adoc#[Die Steuerelemente werden vorgestellt]
+* xref:videos:loop.adoc#[Loop - Das zyklische Steuerelement]
+* xref:videos:split.adoc#[Split - Führe deine Prozesse in zwei unterschiedliche Richtungen]
+* xref:videos:filter.adoc#[Filter - Das Steuerelement um deine Prozesse zu filtern]
+* xref:videos:dialog.adoc#[Dialog - Lass deine Mitarbeiter die Richtung des Prozesses bestimmen]
+* xref:videos:fallbeispiel-multi.adoc#[Fallbeispiel - Multi-Order-Picking]
+* xref:videos:fallbeispiel-single.adoc#[Fallbeispiel - Single-Order-Picking]
