--- a/docs/de-de/modules/videos/pages/webshop.adoc
+++ b/docs/de-de/modules/videos/pages/webshop.adoc
@@ -5,8 +5,6 @@
 
 Baue dir deinen Traum-Webshop! Dieses Modul nimmt dich mit auf eine Lernreise durch das Universum von Ceres und IO!
 
-xref:videos:erste-schritte.adoc#[Erste Schritte mit deinem Webshop]
-
-xref:videos:individualisiere-look-deines-ceres-shops.adoc#[Individualisiere den Look deines Ceres-Shops]
-
-xref:videos:deine-artikel.adoc#[Präsentiere deine Artikel im Shop]
+* xref:videos:webshop-erste-schritte.adoc#[Erste Schritte mit deinem Webshop]
+* xref:videos:individualisiere-look-deines-ceres-shops.adoc#[Individualisiere den Look deines Ceres-Shops]
+* xref:videos:deine-artikel.adoc#[Präsentiere deine Artikel im Shop]
