--- a/docs/de-de/modules/videos/pages/zusatzinformationen-sync.adoc
+++ b/docs/de-de/modules/videos/pages/zusatzinformationen-sync.adoc
@@ -1,4 +1,4 @@
-= Zusätzliche Informationen zu Syncs hinzufügen
+= Eigener Wert: Informationen ergänzen
 :page-index: false
 :id: A7WFYLS
 :author: team-plenty-channel
@@ -6,8 +6,14 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|Willst du eine Datei in plentymarkets importieren, aber es fehlen einige wichtige Informationen? Du musst die Datei nicht manuell anpassen! Nutze stattdessen die Eigener Wert-Funktion in ElasticSync, um die fehlenden Informationen hinzuzufügen. +
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt.
+|Willst du eine Datei in plentymarkets importieren, aber es fehlen einige wichtige Informationen?
+Du musst die Datei nicht manuell anpassen!
+Nutze stattdessen die Eigener Wert-Funktion, um die fehlenden Informationen zu ergänzen.
+
+*_Hinweis:_*
+Als dieses Video gedreht wurde, hieß das Import-Tool noch ElasticSync.
+Dieser Name ist veraltet, und das Menü hat sich seitdem optisch ein wenig verändert.
+Aber der Inhalt des Videos ist immer noch allgemein gültig.
 |
 |===
 //end::einleitung[]
