--- a/docs/de-de/modules/videos/pages/eigenschaften-artikelinfos-hinterlegen.adoc
+++ b/docs/de-de/modules/videos/pages/eigenschaften-artikelinfos-hinterlegen.adoc
@@ -2,8 +2,6 @@
 :id: ZOASVVX
 :author: team-plenty-channel
 
-include::./eigenschaften.adoc[tag=einleitung]
+include::./eigenschaften-amazon.adoc[tag=einleitung]
 
 video::202024357[vimeo, start=322]
-
-include::./eigenschaften.adoc[tag=transkript]
