--- a/docs/de-de/modules/videos/pages/eigenschaften-verknuepfen.adoc
+++ b/docs/de-de/modules/videos/pages/eigenschaften-verknuepfen.adoc
@@ -2,8 +2,6 @@
 :id: YDZRFBM
 :author: team-plenty-channel
 
-include::./eigenschaften.adoc[tag=einleitung]
+include::./eigenschaften-amazon.adoc[tag=einleitung]
 
 video::202024357[vimeo, start=186]
-
-include::./eigenschaften.adoc[tag=transkript]
