--- a/docs/de-de/modules/videos/pages/listings.adoc
+++ b/docs/de-de/modules/videos/pages/listings.adoc
@@ -3,16 +3,10 @@
 :id: ZNINOAD
 :author: team-plenty-channel
 
-xref:videos:import-listing-import.adoc#[Lege mit dem Import deiner eBay-Listings Artikel an]
-
-xref:videos:listings-anlegen.adoc#[Listings anlegen]
-
-xref:videos:listings-bearbeiten.adoc#[eBay Listings bearbeiten]
-
-xref:videos:listings-starten.adoc#[Listings starten, neu starten und löschen leicht gemacht]
-
-xref:videos:mehrere-listings-bearbeiten.adoc#[Bearbeite verschiedene Listings gleichzeitig]
-
-xref:videos:layout-vorlagen.adoc#[Mit Layout-Vorlagen eBay-Listings individualisieren]
-
-xref:videos:retouren.adoc#[eBay-Retouren abwickeln und automatisieren]
+* xref:videos:import-listing-import.adoc#[Lege mit dem Import deiner eBay-Listings Artikel an]
+* xref:videos:listings-anlegen.adoc#[Listings anlegen]
+* xref:videos:listings-bearbeiten.adoc#[eBay Listings bearbeiten]
+* xref:videos:listings-starten.adoc#[Listings starten, neu starten und löschen leicht gemacht]
+* xref:videos:mehrere-listings-bearbeiten.adoc#[Bearbeite verschiedene Listings gleichzeitig]
+* xref:videos:layout-vorlagen.adoc#[Mit Layout-Vorlagen eBay-Listings individualisieren]
+* xref:videos:retouren.adoc#[eBay-Retouren abwickeln und automatisieren]
