--- a/docs/de-de/modules/videos/pages/warenwirtschaft.adoc
+++ b/docs/de-de/modules/videos/pages/warenwirtschaft.adoc
@@ -5,4 +5,4 @@
 
 Deine Warenwirtschaft ist ein eigenes kleines Universum, und dennoch ist sie schnell in dein plentymarkets System übertragen. Wie genau, lernst du in diesem Modul!
 
-xref:videos:lager-anlegen-und-verwalten.adoc#[Lager anlegen und verwalten]
+* xref:videos:lager-anlegen-und-verwalten.adoc#[Lager anlegen und verwalten]
