--- a/docs/de-de/modules/daten/partials/catalogues-faq.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-faq.adoc
@@ -1,11 +1,11 @@
 
-include::kataloge:page$artikel.adoc[tag=faq-export-key]
+include::daten:page$artikel.adoc[tag=faq-export-key]
 
-include::kataloge:page$artikel.adoc[tag=faq-missing-column]
+include::daten:page$artikel.adoc[tag=faq-missing-column]
 
-include::kataloge:page$artikel.adoc[tag=faq-array]
+include::daten:page$artikel.adoc[tag=faq-array]
 
-include::kataloge:page$artikel.adoc[tag=faq-import]
+include::daten:page$artikel.adoc[tag=faq-import]
 
 [.collapseBox]
 .*Unter der Download-URL des Katalogs gibt es keine Datei. Warum?*
