--- a/docs/en-gb/modules/data/partials/catalogues-faq.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-faq.adoc
@@ -1,11 +1,11 @@
 
-include::catalogues:page$item.adoc[tag=faq-export-key]
+include::data:page$item.adoc[tag=faq-export-key]
 
-include::catalogues:page$item.adoc[tag=faq-missing-column]
+include::data:page$item.adoc[tag=faq-missing-column]
 
-include::catalogues:page$item.adoc[tag=faq-array]
+include::data:page$item.adoc[tag=faq-array]
 
-include::catalogues:page$item.adoc[tag=faq-import]
+include::data:page$item.adoc[tag=faq-import]
 
 [.collapseBox]
 .*No file is available through the catalogue’s download URL. Why?*
