note about URL instead of notification - DE

--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -441,7 +441,8 @@ Katalogdaten einmalig in Datei exportieren:
 Du kannst während des Exportvorgangs weiter arbeiten. +
 *_Wichtig:_* Der Export läuft im Hintergrund. Es wird _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Auch der Export kleiner Datenmengen dauert ca. 30 Minuten.
 . Wenn der Export abgeschlossen ist, wirst in den Notifications (icon:notifications_none[set=material]) angezeigt, dass die Exportdatei heruntergeladen werden kann.
-. Klicke in der Notification auf icon:link[set=material] *Herunterladen*.
+. Klicke in der Notification auf icon:link[set=material] *Herunterladen*. +
+*_Tipp:_* Die Notification wird nicht mehr angezeigt? Die Datei kann immer über die URL in den *Download-Einstellungen* abgerufen werden.
 . Speichere die Datei auf deinem Rechner.
 --
  
