--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -440,7 +440,8 @@ Exporting catalogue data to a file once:
 You can continue working during the export process. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes.
 . Once the export is finished, you will be notified (icon:notifications_none[set=material]) that the export file can be downloaded.
-. Click on icon:link[set=material] *Download* within the notification.
+. In the notification center, click on icon:link[set=material] *Download*. +
+*_Tip:_* The notification is no longer visible? You can access the file at any time using the URL shown in the *Download settings*.
 . Save the file on your computer.
 --
  
