Fix link and icon colour

--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -363,10 +363,10 @@ The list contains all <<#create-footer, footers>> that you have already created.
 //|In which area should the email template be available? Select a type from the drop-down list.
 
 |[#intable-template-settings-static-attachments]*Select static attachments*
-|This drop-down list provides all attachments that you uploaded before in the *CMS » Documents* menu. These are, for example, installation guides or product data sheets. Select (icon:check-square[role="blue"]) up to 3 static attachments from the drop-down list.
+|This drop-down list provides all attachments that you uploaded before in the *CMS » Documents* menu. These are, for example, installation guides or product data sheets. Select (icon:check_box[set=material, role=skyBlue]) up to 3 static attachments from the drop-down list.
 
 |[#intable-template-settings-dynamic-attachments]*Select dynamic attachments*
-|This drop-down list provides all xref:orders:order-documents.adoc#100[location-based documents] that you set up in the *Setup » Client » [Select client] » Locations » [Select location] » Documents* menu. Select (icon:check-square[role="blue"]) up to 3 dynamic attachments from the drop-down list.
+|This drop-down list provides all xref:orders:order-documents.adoc#100[location-based documents] that you set up in the *Setup » Client » [Select client] » Locations » [Select location] » Documents* menu. Select (icon:check_box[set=material, role=skyBlue]) up to 3 dynamic attachments from the drop-down list.
 
 |[#intable-template-settings-subject]*Subject*
 |What’s the subject of your email?
