--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -386,10 +386,10 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 //|In welchem Bereich soll die E-Mail-Vorlage als Auswahl zur Verfügung stehen? Wähle einen Typ aus der Dropdown-Liste.
 
 |[#intable-template-settings-static-attachments]*Wähle statische Anhänge*
-|In dieser Dropdown-Liste stehen dir alle Anhänge zur Verfügung, die du vorher im Menü *CMS » Dokumente* hochgeladen hast. Dies sind zum Beispiel Installationsanleitungen oder Produktdatenblätter. Wähle (icon:check_box[set=material, role=blue]) bis zu 3 statische Anhänge aus der Dropdown-Liste.
+|In dieser Dropdown-Liste stehen dir alle Anhänge zur Verfügung, die du vorher im Menü *CMS » Dokumente* hochgeladen hast. Dies sind zum Beispiel Installationsanleitungen oder Produktdatenblätter. Wähle (icon:check_box[set=material, role=skyBlue]) bis zu 3 statische Anhänge aus der Dropdown-Liste.
 
 |[#intable-template-settings-dynamic-attachments]*Wähle dynamische Anhänge*
-|In dieser Dropdown-Liste stehen dir alle xref:auftraege:auftragsdokumente.adoc#100[standortbezogenen Dokumente] zur Verfügung, die du im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente* eingerichtet hast. Wähle (icon:check_box[set=material, role=blue]) bis zu 3 dynamische Anhänge aus der Dropdown-Liste.
+|In dieser Dropdown-Liste stehen dir alle xref:auftraege:auftragsdokumente.adoc#100[standortbezogenen Dokumente] zur Verfügung, die du im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente* eingerichtet hast. Wähle (icon:check_box[set=material, role=skyBlue]) bis zu 3 dynamische Anhänge aus der Dropdown-Liste.
 
 |[#intable-template-settings-subject]*Betreff*
 |Wie lautet der Betreff deiner E-Mail?
