FIX link one more time

--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -103,7 +103,7 @@ include::_includes:page$rechte.adoc[]
 [#ansichten-freigeben-andere-benutzer]
 === Ansichten für andere Benutzer:innen freigeben
 
-Zu einem späteren Zeitpunkt wirst du vielleicht eine xref:crm:kontakt-erstellen.adoc#ansicht-einrichten[neue Ansicht zum Erstellen eines neues Kontakts] oder eine xref:crm:kontakte:kontakt-bearbeiten.adoc#ansicht-bearbeiten[neue Ansicht zum Bearbeiten eines bestehenden Kontakts] einrichten. Du kannst diese Ansichten dann auch anderen Benutzer:innen in deinem plentymarkets System freigeben, damit sie mit den Ansichten arbeiten können. +
+Zu einem späteren Zeitpunkt wirst du vielleicht eine xref:crm:kontakt-erstellen.adoc#ansicht-einrichten[neue Ansicht zum Erstellen eines neues Kontakts] oder eine xref:crm:kontakt-bearbeiten.adoc#ansicht-bearbeiten[neue Ansicht zum Bearbeiten eines bestehenden Kontakts] einrichten. Du kannst diese Ansichten dann auch anderen Benutzer:innen in deinem plentymarkets System freigeben, damit sie mit den Ansichten arbeiten können. +
 Die Standardansicht ist für alle Benutzer:innen standardmäßig aktiviert. Du hast auch die Möglichkeit, einer Benutzer:in die Rechte für die Standardansicht zu entziehen.
 
 Alle Einstellungen, die sich auf die Freigabe von Ansichten beziehen, nimmst du im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* im Menüpunkt *Ansichten* vor.
