update sales rep logic in contact details portlet (#211)
* update sales rep logic in contact details portlet

* update description because logic changed

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -249,11 +249,22 @@ Wenn du den Kontaktdatensatz öffnest, ist dieser Bereich standardmäßig geöff
 *_Hinweis:_* Das sind Pflichtfelder, wenn _keine_ Firma gewählt wird.
 
 | *Typ*
-| Wähle einen Typ. Standardmäßig stehen die Typen *Kunde*, *Handelsvertreter*, *Lieferant*, *Partner*, *Hersteller* und *Interessent* zur Auswahl. xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Eigene Typen] erstellst du im Menü *Einrichtung » CRM » Typen*. +
-*_Hinweis:_* Dieses Feld war bereits bei der Neuanlage des Kontakts vorausgewählt. Du kannst den Wert hier natürlich anpassen.
+|Wähle einen Typ. Standardmäßig stehen die Typen *Kunde*, *Handelsvertreter*, *Lieferant*, *Partner*, *Hersteller* und *Interessent* zur Auswahl. xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Eigene Typen] erstellst du im Menü *Einrichtung » CRM » Typen*. +
+*_Hinweis:_* Dieses Feld war bereits bei der Neuanlage des Kontakts vorausgewählt. Du kannst den Wert hier natürlich anpassen. +
+*_Hinweis zum Typ Handelsvertreter:_* Wenn du den Typ *Handelsvertreter* wählst, werden automatisch die beiden Felder *Land des Typs "Handelsvertreter"* und *PLZ-Bereich des Typs "Handelsvertreter"* angezeigt.
+
+| *Land des Typs "Handelsvertreter"*
+|Dieses Feld ist nur sichtbar, wenn du als *Typ* die Option *Handelsvertreter* gewählt hast. +
+Wähle das Land aus der Dropdown-Liste, für das der PLZ-Bereich des Handelsvertreters gelten soll. +
+*_Tipp:_* Wenn ein Handelsvertreter in mehreren Ländern tätig ist, erstelle pro Land einen Kontaktdatensatz.
+
+| *PLZ-Bereich des Typs "Handelsvertreter"*
+|Dieses Feld ist nur sichtbar, wenn du als *Typ* die Option *Handelsvertreter* gewählt hast. +
+Gib den PLZ-Bereich des Handelsvertreters ein. Gib mehrere Bereiche durch Komma getrennt ein, z.B. *33*,*34*. +
+*_Hinweis:_* Je mehr Ziffern pro PLZ-Bereich, desto mehr wird der Bereich eingegrenzt.
 
 | *Klasse*
-| Wähle eine Klasse. Klassen dienen zur internen Unterscheidung und z.B. ob und welcher xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabatt] dieser Klasse gewährt werden soll. xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt. +
+|Wähle eine Klasse. Klassen dienen zur internen Unterscheidung und z.B. ob und welcher xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabatt] dieser Klasse gewährt werden soll. xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt. +
 Soll zum Beispiel zwischen Endkund:innen und Händler:innen bei der Preisanzeige im plentyShop unterschieden werden, kann dies über die Option *Anzeige der Preise im Webshop* in den Einstellungen der Kundenklasse vorgenommen werden. Eine gängige Einstellung wäre z.B., dass bei Endkund:innen (B2C) die Bruttopreise und bei Händler:innen (B2B) die Nettopreise im plentyShop angezeigt werden. +
 *_Hinweis:_* Dieses Feld war bereits bei der Neuanlage des Kontakts vorausgewählt. Du kannst den Wert hier natürlich anpassen.
 
@@ -279,8 +290,8 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 |Wähle einen Eigner für den Kontakt. Wenn kein Eigner gewählt werden soll, wähle die leere Option. +
 *_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten » [Benutzer öffnen]* im Tab *Eigner* die Option *Kunde* aktiviert ist.
 
-//| *Handelsvertreter*
-//|Hier kannst du dem Kontakt einen Handelsvertreter zuordnen. Gib die ersten 3 Buchstaben des Namens ein, um die Vorschlagsliste aufzurufen. Mit einem Klick auf die ID bzw. den Namen ist der Handelsvertreter dem Kontakt zugeordnet.
+| *Handelsvertreter, der dem Kontakt zugeordnet ist*
+|Hier kannst du dem Kontakt einen Handelsvertreter zuordnen. Gib die ersten 3 Buchstaben des Namens ein, um die Vorschlagsliste der bereits in deinem System gespeicherten Handelsvertreter aufzurufen. Mit einem Klick auf die ID bzw. den Namen ist der Handelsvertreter dem Kontakt zugeordnet.
 
 | *Bewertung*
 |Speichere eine Bewertung für den Kontakt. Diese Einstellung dient nur für interne Zwecke. +
