remove old API info for bol.com - DE+EN

--- a/docs/de-de/modules/_includes/pages/EA-tabbed.adoc
+++ b/docs/de-de/modules/_includes/pages/EA-tabbed.adoc
@@ -13,5 +13,5 @@
 ======
 
 ifdef::ea-queue[]
-NOTE: Beim Auslösen dieser Ereignisaktion werden die Daten nicht live übermittelt, sondern zu einer Warteschlange hinzugefügt. Wenn viele Jobs in der Warteschlange sind, kann es deshalb mehrere Minuten dauern, bis die Daten übermittelt werden. Der Vorteil? Wenn der Zielserver nicht erreichbar ist oder die Anzahl der Anfragen gedrosselt ist, werden mehrere weitere Versuche unternommen, die Daten zu übermitteln.
+Beim Auslösen dieser Ereignisaktion werden die Daten nicht live übermittelt, sondern zu einer Warteschlange hinzugefügt. Wenn viele Jobs in der Warteschlange sind, kann es deshalb mehrere Minuten dauern, bis die Daten übermittelt werden. Der Vorteil? Wenn der Zielserver nicht erreichbar ist oder die Anzahl der Anfragen gedrosselt ist, werden mehrere weitere Versuche unternommen, die Daten zu übermitteln.
 endif::[]
