--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -6,16 +6,10 @@
 :bol.com:
 :market: bol.com
 
-[IMPORTANT]
-.Artikelexport jetzt auf Kataloge umstellen!
-====
-Die API v3 von bol.com wird deaktiviert. Erstelle daher umgehend Kataloge für deinen Artikelexport. (<<#600, Wie?>>)
-====
-
 Der niederländische Online-Marktplatz link:http://bol.com[bol.com^] hat sich zum führenden Online-Marktplatz der Benelux entwickelt und vertreibt eine breite Angebotspalette inklusive Elektronik, Multimedia, Spielzeug etc. Auf bol.com kannst du deine Artikel in den Niederlanden und Belgien verkaufen.
 
 [#210]
-== Informationen zur Häufigkeit des Datenaustauschs
+== Häufigkeit des Datenaustauschs
 
 Nachdem du die Schnittstelle zu bol.com in plentymarkets eingerichtet hast, stehen die in <<#data-exchange>> gelisteten automatisierten Abläufe bereit.
 
@@ -106,12 +100,13 @@ a| Die API-Zugangsdaten erzeugst du im Händlerbereich bei bol.com.
 2+^|Schritt *Lager*
 
 | *Wie sollen die Bestände berechnet werden, welche an bol.com übertragen werden?*
-a| Bestandsmenge für den Angebotsexport wählen. Eine der folgenden Optionen wählen: +
+a| Bestandsmenge für den Angebotsexport wählen. Eine der folgenden Optionen wählen:
 
 * *Summe der Bestandsmengen aller Vertriebslager verwenden* +
 * *Hauptlager des Artikels verwenden* +
 * *Lager auswählen* = Ein oder mehrere Lager wählen. +
-→ Die unter *Lager* aufgelisteten Lager können gewählt werden. Häkchen setzen, um ein Lager zu wählen. +
+→ Die unter *Lager* aufgelisteten Lager können gewählt werden. Häkchen setzen, um ein Lager zu wählen.
+
 *_Wichtig:_* Die Option *Lagerauswahl* beeinflusst den Artikelexport. Wenn ein Artikel nicht mit den hier gewählten Lagern verknüpft ist, wird dieser Artikel nicht exportiert.
 
 2+^|Schritt *Lieferzeiten*
@@ -227,25 +222,6 @@ include::partial$shipping-profile-activate.adoc[]
 Achte darauf, dass die <<#versanddienstleister-bol-com, Namen der Versanddienstleister>> in den Versandprofilen für bol.com auf Niederländisch mit den von bol.com vorgegebenen link:https://api.bol.com/retailer/public/Retailer-API/v6/functional/orders-shipments.html#_transporters[API transporter codes^] gespeichert sind.
 ====
 
-[#400]
-=== Kategorien verknüpfen
-
-TIP: Diese Verknüpfungen benötigst du nicht mehr, wenn du deine Artikeldaten über Kataloge zu bol.com exportierst.
-
-Verknüpfe deine plentymarkets Kategorien mit den Kategorien von bol.com, damit deine Artikel in diesen bol.com-Kategorien angezeigt werden. Weitere Artikel der verknüpften Kategorien werden automatisch zugewiesen.
-
-[.instruction]
-Kategorien verknüpfen:
-
-. Öffne das Menü *Einrichtung » Märkte » bol.com » Kategorieverknüpfung*.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
-→ Das Fenster *Kategorie wählen* wird geöffnet.
-. Wähle die bol.com-Kategorie, die am besten zu deiner plentymarkets Kategorie passt.
-. Klicke auf *Übernehmen*. +
-→ Die Bezeichnung der bol.com-Kategorie und der Kategoriepfad werden angezeigt.
-. Wenn du die Bezeichnung der bol.com-Kategorie bereits kennst, gib sie in das Feld *Marktplatzkategorie* ein, um sie mit deiner plentymarkets Kategorie zu verknüpfen.
-. Speichere (icon:save[set=plenty]) die Einstellungen.
-
 [#600]
 == Artikelexport einrichten
 
@@ -288,12 +264,6 @@ include::partial$catalogue-assistant-config.adoc[]
 === Datenfelder im Katalog zuordnen
 
 Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplatzes den in plentymarkets gespeicherten Artikeldaten zu. Informationen dazu, welche Daten für welches Datenfeld des Marktplatzes übertragen werden müssen, findest du in der Dokumentation des Marktplatzes.
-
-[TIP]
-.Eigenschaften verwenden
-====
-Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
-====
 
 include::partial$catalogue-mapping.adoc[]
 
