--- a/docs/en-gb/modules/_includes/pages/EA-tabbed.adoc
+++ b/docs/en-gb/modules/_includes/pages/EA-tabbed.adoc
@@ -13,5 +13,5 @@
 ======
 
 ifdef::ea-queue[]
-NOTE: The data is not transferred in real time when this event procedure is triggered. Instead, the data is registered in a queue. If there are several jobs in the queue, it can take several minutes for the data to be transferred. The advantage? If the target server is unavailable or throttled, several attempts are made to transfer the data.
+The data is not transferred in real time when this event procedure is triggered. Instead, the data is registered in a queue. If there are several jobs in the queue, it can take several minutes for the data to be transferred. The advantage? If the target server is unavailable or throttled, several attempts are made to transfer the data.
 endif::[]
